Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119517

Segfault in tst_qquickmaterialstyle Material::test_background:drawer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.0 FF
    • dev
    • Quick: Controls 2
    • None
    • f60fb8f41 (dev)

    Description

      16:56:36: Starting /home/mitch/dev/qt-dev-debug/qtdeclarative/tests/auto/quickcontrols/qquickmaterialstyle/tst_qquickmaterialstyle Material::test_background...
      ********* Start testing of tst_qquickmaterialstyle *********
      Config: Using QtTest library 6.7.0, Qt 6.7.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 11.4.0), ubuntu 22.04
      PASS   : tst_qquickmaterialstyle::Material::initTestCase()
      PASS   : tst_qquickmaterialstyle::Material::test_background(button)
      AddressSanitizer:DEADLYSIGNAL
      =================================================================
      ==49224==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000000 (pc 0x7fbfefd8d263 bp 0x7ffc3db81fd0 sp 0x7ffc3db81df0 T0)
      ==49224==The signal is caused by a READ memory access.
      ==49224==Hint: address points to the zero page.
          #0 0x7fbfefd8d263 in QWindow::mapFromGlobal(QPointF const&) const /home/mitch/dev/qt-dev/qtbase/src/gui/kernel/qwindow.cpp:2891
          #1 0x7fbfec14d479 in QQuickItem::setCursor(QCursor const&) /home/mitch/dev/qt-dev/qtdeclarative/src/quick/items/qquickitem.cpp:8102
          #2 0x7fbfe050ea7f in createDimmer /home/mitch/dev/qt-dev/qtdeclarative/src/quicktemplates/qquickpopup.cpp:853
          #3 0x7fbfe050f33d in QQuickPopupPrivate::createOverlay() /home/mitch/dev/qt-dev/qtdeclarative/src/quicktemplates/qquickpopup.cpp:886
          #4 0x7fbfe050b24c in QQuickPopupPrivate::prepareEnterTransition() /home/mitch/dev/qt-dev/qtdeclarative/src/quicktemplates/qquickpopup.cpp:562
          #5 0x7fbfe04c407a in QQuickDrawerPrivate::prepareEnterTransition() /home/mitch/dev/qt-dev/qtdeclarative/src/quicktemplates/qquickdrawer.cpp:588
          #6 0x7fbfe05106ff in QQuickPopupTransitionManager::transitionEnter() /home/mitch/dev/qt-dev/qtdeclarative/src/quicktemplates/qquickpopup.cpp:966
          #7 0x7fbfe05156d2 in QQuickPopup::setVisible(bool) /home/mitch/dev/qt-dev/qtdeclarative/src/quicktemplates/qquickpopup.cpp:2103
          #8 0x7fbfe0520e4a in QQuickPopup::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) /home/mitch/dev/qt-dev-debug/qtdeclarative/src/quicktemplates/QuickTemplates2_autogen/include/moc_qquickpopup_p.cpp:1354
          #9 0x7fbfe0521a40 in QQuickPopup::qt_metacall(QMetaObject::Call, int, void**) /home/mitch/dev/qt-dev-debug/qtdeclarative/src/quicktemplates/QuickTemplates2_autogen/include/moc_qquickpopup_p.cpp:1442
          #10 0x7fbfe04c6469 in QQuickDrawer::qt_metacall(QMetaObject::Call, int, void**) /home/mitch/dev/qt-dev-debug/qtdeclarative/src/quicktemplates/QuickTemplates2_autogen/include/moc_qquickdrawer_p.cpp:225
          #11 0x7fbfea880cff in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) /home/mitch/dev/qt-dev/qtdeclarative/src/qml/qml/qqmlvmemetaobject.cpp:1182
          #12 0x7fbfea2c14d4 in void QQmlPropertyData::doMetacall<(QMetaObject::Call)2>(QObject*, int, void**) const /home/mitch/dev/qt-dev-debug/qtbase/include/QtQml/6.7.0/QtQml/private/../../../../../../../qt-dev/qtdeclarative/src/qml/qml/qqmlpropertydata_p.h:358
          #13 0x7fbfea2bfc3f in QQmlPropertyData::writeProperty(QObject*, void*, QFlags<QQmlPropertyData::WriteFlag>) const /home/mitch/dev/qt-dev-debug/qtbase/include/QtQml/6.7.0/QtQml/private/../../../../../../../qt-dev/qtdeclarative/src/qml/qml/qqmlpropertydata_p.h:378
          #14 0x7fbfea618158 in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlRefPointer<QQmlContextData> const&, QFlags<QQmlPropertyData::WriteFlag>) /home/mitch/dev/qt-dev/qtdeclarative/src/qml/qml/qqmlproperty.cpp:1500
          #15 0x7fbfea063646 in QV4::QObjectWrapper::setProperty(QV4::ExecutionEngine*, QObject*, QQmlPropertyData const*, QV4::Value const&) /home/mitch/dev/qt-dev/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:757
          #16 0x7fbfea05d9d5 in QV4::QObjectWrapper::setQmlProperty(QV4::ExecutionEngine*, QQmlRefPointer<QQmlContextData> const&, QObject*, QV4::String*, QFlags<QV4::QObjectWrapper::Flag>, QV4::Value const&) /home/mitch/dev/qt-dev/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:572
          #17 0x7fbfea065d97 in QV4::QObjectWrapper::virtualPut(QV4::Managed*, QV4::PropertyKey, QV4::Value const&, QV4::Value*) /home/mitch/dev/qt-dev/qtdeclarative/src/qml/jsruntime/qv4qobjectwrapper.cpp:944
          #18 0x7fbfe9de70a4 in QV4::Object::put(QV4::StringOrSymbol*, QV4::Value const&, QV4::Value*) /home/mitch/dev/qt-dev-debug/qtbase/include/QtQml/6.7.0/QtQml/private/../../../../../../../qt-dev/qtdeclarative/src/qml/jsruntime/qv4object_p.h:281
          #19 0x7fbfe9fdb37f in QV4::Lookup::setterFallback(QV4::Lookup*, QV4::ExecutionEngine*, QV4::Value&, QV4::Value const&) /home/mitch/dev/qt-dev/qtdeclarative/src/qml/jsruntime/qv4lookup.cpp:591
          #20 0x7fbfea1d5fc1 in QV4::Moth::VME::interpret(QV4::JSTypesStackFrame*, QV4::ExecutionEngine*, char const*) /home/mitch/dev/qt-dev/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:703
          #21 0x7fbfea1ccc23 in QV4::Moth::VME::exec(QV4::JSTypesStackFrame*, QV4::ExecutionEngine*) /home/mitch/dev/qt-dev/qtdeclarative/src/qml/jsruntime/qv4vme_moth.cpp:487
          #22 0x7fbfe9f764dc in qfoDoCall /home/mitch/dev/qt-dev/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:526
          #23 0x7fbfe9f76841 in QV4::ArrowFunction::virtualCall(QV4::FunctionObject const*, QV4::Value const*, QV4::Value const*, int) /home/mitch/dev/qt-dev/qtdeclarative/src/qml/jsruntime/qv4functionobject.cpp:556
          #24 0x7fbfe9da6d4b in QV4::FunctionObject::call(QV4::Value const*, QV4::Value const*, int) const /home/mitch/dev/qt-dev-debug/qtbase/include/QtQml/6.7.0/QtQml/private/../../../../../../../qt-dev/qtdeclarative/src/qml/jsruntime/qv4functionobject_p.h:171
          #25 0x7fbfea125bad in QV4::Runtime::CallWithReceiver::call(QV4::ExecutionEngine*, QV4::Value const&, QV4::Value const&, QV4::Value*, int) /home/mitch/dev/qt-dev/qtdeclarative/src/qml/jsruntime/qv4runtime.cpp:1526
          #26 0x7fbfd1d920c7  (/memfd:JITCode:QtQml (deleted)+0xc7)
      
      AddressSanitizer can not provide additional info.
      SUMMARY: AddressSanitizer: SEGV /home/mitch/dev/qt-dev/qtbase/src/gui/kernel/qwindow.cpp:2891 in QWindow::mapFromGlobal(QPointF const&) const
      ==49224==ABORTING
      16:56:41: /home/mitch/dev/qt-dev-debug/qtdeclarative/tests/auto/quickcontrols/qquickmaterialstyle/tst_qquickmaterialstyle exited with code 1
      

      Attachments

        For Gerrit Dashboard: QTBUG-119517
        # Subject Branch Project Status CR V

        Activity

          People

            mitch_curtis Mitch Curtis
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes